@@ -37,6 +37,7 @@ CHANGELOG ONLY RECORDS CHANGES MADE POST 1/3/2020
     Functions:
         Added speed_factor to text_scroll
         Fixed voice files in text_scroll
+        Made turn_based_damage compatible for enemy use
     Other:
         Uploaded text_game to github (https://github.com/dirkwind/text-game)
         Added README.md
